fix issue with text alignment on buttons

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -18,6 +18,7 @@
   &__hole {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100%;
   }
 }
